@@ -174,6 +174,8 @@ New Features
 
 * SOLR-6234: Scoring for query time join (Mikhail Khludnev)
 
+* SOLR-5882: score local parameter for block join query parser {!parent} (Andrey Kudryavtsev, Mikhail Khludnev)
+
 Bug Fixes
 ----------------------
 
